Auth server WIP update
