# go_server/api/middleware/auth.go
@@ -10,7 +10,7 @@ import (
 )
 
 // AuthenticationMiddleware checks if the user has a valid JWT
-func AuthenticationMiddleware() gin.HandlerFunc {
+func AuthenticationMiddleware(accessTokenSecret string) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		tokenString := c.GetHeader("Authorization")
 		if tokenString == "" {
@@ -22,21 +22,43 @@ func AuthenticationMiddleware() gin.HandlerFunc {
 		// The token should be prefixed with "Bearer "
 		tokenParts := strings.Split(tokenString, " ")
 		if len(tokenParts) != 2 || tokenParts[0] != "Bearer" {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid authentication token"})
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid structure token"})
 			c.Abort()
 			return
 		}
 
 		tokenString = tokenParts[1]
 
-		claims, err := tokenutil.VerifyToken(tokenString)
+		claims, err := tokenutil.VerifyToken(tokenString, []byte(accessTokenSecret))
 		if err != nil {
 			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid authentication token"})
 			c.Abort()
 			return
 		}
 
-		c.Set("user_id", claims["user_id"])
+		c.Set("user_id", claims.UserID)
+		c.Set("role", claims.Role)
 		c.Next() // Proceed to the next handler if authorized
+	}
+}
+
+// Role-based Middleware
+func RoleMiddleware(requiredRole string) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		role, ok := c.Get("role")
+		if !ok {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Missing role"})
+			c.Abort()
+			return
+		}
+
+		if role != requiredRole {
+			c.JSON(http.StatusForbidden, gin.H{"error": "Insufficient privileges"})
+			c.Abort()
+			return
+		}
+
+		// Allow access
+		c.Next()
 	}
 }
