# go_server/domain/user.go
@@ -7,15 +7,15 @@ import (
 )
 
 const (
-	CollectionUser = "users"
+	USERS = "users" // collection or table name
 )
 
 type User struct {
-	ID       uuid.UUID `json:"_id" bson:"_id"`
-	Username string    `json:"username" bson:"username"`
-	Email    string    `json:"email" bson:"email"`
-	Password string    `json:"-" bson:"password"`
-	Role     string    `json:"role" bson:"role"`
+	ID       uuid.UUID `bson:"_id"`
+	Username string    `bson:"username"`
+	Email    string    `bson:"email"`
+	Password string    `bson:"password"`
+	Role     string    `bson:"role"`
 }
 
 type UserRepository interface {
@@ -23,15 +23,4 @@ type UserRepository interface {
 	Fetch(c context.Context) ([]User, error)
 	GetByEmail(c context.Context, email string) (User, error)
 	GetByID(c context.Context, id string) (User, error)
-}
-
-type UserRegister struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
-	Email    string `json:"email"`
-}
-
-type UserLogin struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
 }
